jEdit 5.7 version history
       (changes since jEdit 5.6.0)
:encoding=UTF-8:

{{{ Version 5.7pre1

Thanks to Björn Kautler, Matthieu Casanova and Dale Anson for contributing to this release.

{{{ Bug Fixes

- Fix the installation of plugins trying to use invalid file names (Björn Kautler)

- VFSManager.canReadFile() was returning true only for directories (#4102 - Matthieu Casanova)

- Allow user to choose filename when printing to pdf (partial fix for #4115 - Dale Anson)

}}}
{{{ Miscellaneous

- Status bar design updated with the ability to add widgets to the left and the right of the bar (Matthieu Casanova)

- Make building possible when using Java 15+ (Björn Kautler)

}}}
{{{ API Changes

- Added new methods in SegmentBuffer for append and insert text (Matthieu Casanova)

- New service org.jedit.util.CleanerService replacing use of finalize() (Matthieu Casanova)

- New methods JEditBuffer.getWordWrap() and JeditBuffer.setWordWrap() (Matthieu Casanova)

- New method DialogChooser.openChooserWindow() showing a chooser dialog (Matthieu Casanova)

- New method DialogChooser.openListChooserWindow() showing a chooser dialog list (Matthieu Casanova)

- New method Buffer.setLineSeparator() (Matthieu Casanova)

- New method Buffer.reloadWithEncoding() (Matthieu Casanova)

- New method StatusBar.updateEvent() (Matthieu Casanova)

- New method BufferSet.contains() (Matthieu Casanova)

- Deprecated methods removed
    StandardUtilities.objectsEqual()
    TextArea.showPopupMenu()
    Mode.acceptFilename()
    OperatingSystem.isDOSDerived()
    OperatingSystem.hasJava17()
    MiscUtilities.getFileNameNoExtension()
    GUIUtilities.prettifyMenuLabel()
    GUIUtilities.setAutoMnemonic()
    GUIUtilities.parseColor()
    GUIUtilities.parseStyle()
    GUIUtilities.adjustForScreenBounds()
    GUIUtilities.requestFocus()
    GUIUtilities.isPopupTrigger()
    GUIUtilities.isMiddleButton()
    GUIUtilities.isRightButton()
    GUIUtilities.getScreenBounds()